# qa-eval

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: _pull_requests.yml  _release.yml
graphrag_eval/: aggregation.py  evaluation.py
graphrag_eval/steps/: __init__.py  retrieval.py  retrieval_evaluation_using_answer.py
prompts/: template.md
qa_eval/: aggregation.py  answer_correctness.py  answer_evaluation.py  answer_relevance.py  evaluation.py
qa_eval/steps/: __init__.py  retrieval_evaluation_using_answer.py  retrieval_evaluation_using_context_texts.py  sparql.py
scripts/: tsv2yaml.py
system-tests/: answer_relevance.py  retrieval_evaluation_using_answer.py  retrieval_evaluation_using_reference_context.py
tests/: test_answer_evaluation.py  test_evaluation.py  test_tools_calls_comparison.py
tests-with-openai/: test_answer_correctness.py  test_answer_evaluation.py  test_answer_relevance.py  test_evaluation.py
tests-with-openai/steps/: test_retrieval_evaluation_using_answer.py  test_retrieval_evaluation_using_reference_context.py
tests-with-openai/test_data/: chat_responses_1.jsonl  chat_responses_3.jsonl  evaluation_1.yaml  evaluation_2.yaml  evaluation_3.yaml  evaluation_summary_1.yaml  evaluation_summary_2.yaml  evaluation_summary_3.yaml  reference_standard_corpus_1.yaml  sample_chat_responses_2.jsonl  sample_evaluation_per_question_2.yaml  sample_evaluation_summary_2.yaml  sample_reference_standard_corpus_1.yaml
tests/steps/: test_retrieval_evaluation.py  test_sparql_evaluation.py  test_steps.py  test_tool_calls.py
tests/test_data/: chat_responses_1.jsonl  evaluation_1.yaml  evaluation_2.yaml  evaluation_summary_1.yaml  evaluation_summary_2.yaml  reference_standard_corpus_1.yaml  sample_evaluation_per_question_1.yaml  sample_evaluation_summary_1.yaml  sample_evaluation_summary_2.yaml
