[project]
name = "qa-eval"
version = "3.1.0"
description = "For assessing question answering systems' final answers and intermediate steps, against a given set of questions, reference answers and steps."
authors = [
    {name = "Neli Hateva", email = "neli.hateva@graphwise.ai"},
    {name = "Philip Ganchev", email = "philip.ganchev@graphwise.ai"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"

[project.urls]
repository = "https://github.com/Ontotext-AD/qa-eval"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.answer-eval]
optional = true

[tool.poetry.group.answer-eval.dependencies]
openai = "^1.97.0"

[tool.poetry.group.test.dependencies]
pytest = "<9,>=8"
pytest-cov = "<7,>=6"
jsonlines = "4.0.0"
pyyaml = "^6.0.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.openai.dependencies]
openai = "^1.97.0"
langevals = "0.1.*"
langevals-ragas = "^0.1.12"
ragas = "*"
# Compatible versions for langevals
datasets = ">=4.0.0"
pyarrow = ">=14.0.0"

[tool.poetry.group.openai]
optional = true

[project.scripts]
answer-correctness = "qa_eval.answer_evaluation:main"
